# mx-asap

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-build.txt
.github/workflows/: build-release.yml
n2_param/: __init__.py  __main__.py  application.py
n2_param/core/: __init__.py  models.py
n2_param/core/parsing/: __init__.py  asap_report_parser.py
n2_param/export/: __init__.py  interfaces.py
n2_param/gui/: about_info.py  chart_config.py  chart_series.py  file_session.py  file_tab_page.py  main_window.py  mpl_navigation_toolbar.py  qt_figureoptions.py  summary_charts.py  summary_tab_page.py  view_registry.py
n2_param/gui/dialogs/: __init__.py  about_dialog.py
n2_param/i18n/: __init__.py  translator.py
n2_param/io/: __init__.py
n2_param/resources/: strings.csv
packaging/: mx-asap.spec
packaging/release-notes/: README-Linux.txt  README-Windows.txt  README-macOS.txt
samples/: synthetic-asap-alt.002  synthetic-asap-merged.001
source/: __init__.py  __main__.py  application.py
source/core/: __init__.py
source/export/: __init__.py  interfaces.py  sheet_export.py
source/gui/: about_info.py  app_icons.py  chart_config.py  chart_series.py  file_session.py  file_tab_page.py  main_window.py  mpl_navigation_toolbar.py  qt_figureoptions.py  summary_charts.py  summary_tab_page.py  view_registry.py
source/i18n/: __init__.py  translator.py
source/io/: __init__.py  text_files.py
source/project/: __init__.py  mxap_io.py
source/resources/: __init__.py  strings.csv
tests/: test_mxap.py  test_parser.py  test_sheet_export.py
(+14 files in other folders)
