[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mx-asap"
version = "0.1.0"
description = "Materyx ASAP Analyzer — N2 sorption and ASAP text reports: analysis, export, and .mxap projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "openpyxl>=3.1",
  "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
mx-asap = "source.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source*"]

[tool.setuptools.package-data]
"source.resources" = ["*.csv", "icons/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
